# vibe-math-mcp

./: .coverage  .dockerignore  .gitignore  .mcp.json  Dockerfile  LICENSE  PLAN.md  README.md  fastmcp.json  package.json  pyproject.toml  smithery.yaml
.github/workflows/: publish.yml
src/math_mcp_server/: server.py
src/math_mcp_server/core/: __init__.py  converters.py  formatters.py  validators.py
src/math_mcp_server/tools/: array.py  basic.py  calculus.py  financial.py  linalg.py  statistics.py
src/vibe_math/: server.py
src/vibe_math/core/: __init__.py  formatters.py  result_resolver.py  types.py
src/vibe_math/tools/: array.py  basic.py  batch.py  calculus.py  financial.py  linalg.py  statistics.py
src/vibe_math_mcp/: __init__.py  server.py
src/vibe_math_mcp/core/: __init__.py  batch_executor.py  batch_models.py
src/vibe_math_mcp/tools/: basic.py  batch.py
tests/: conftest.py  test_array.py  test_basic.py  test_batch.py  test_calculus.py  test_context_parameter.py  test_financial.py  test_linalg.py  test_output_control.py  test_result_key_meta.py  test_statistics.py  test_validators.py
