[project]
name = "math-mcp-server"
version = "0.1.0"
description = "High-performance MCP server for mathematical operations using Polars and scientific Python"
readme = "README.md"
authors = [
    { name = "Akshay Petta", email = "33671231+apetta@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=1.0.0",
    "polars>=1.34.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.16.0",
    "sympy>=1.12",
    "pydantic>=2.0.0",
    "pyarrow>=22.0.0",
]

[project.scripts]
math-mcp = "math_mcp_server.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-ra",
    "--cov=math_mcp_server",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.coverage.run]
source = ["src/math_mcp_server"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
